💄 Refactor rem units

--- a/src/index.css
+++ b/src/index.css
@@ -7,36 +7,40 @@
     font-family: 'Inter', sans-serif;
 }
 
+html{
+font-size: 100%;
+}
+
 @media screen and (min-width: 320px) {
     html {
-        font-size: 12px;
+        font-size: 60%;
     }
 }
 
 /* For screen sizes from 480px to 768px */
-/* @media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) {
     html {
-        font-size: 10px;
+        font-size: 65%;
     }
-} */
+}
 
 /* For screen sizes from 768px to 1280px */
-/* @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
     html {
-        font-size: 12px;
+        font-size: 70%;
     }
-} */
+}
 
 /* For screen sizes from 1280px to 1536px */
-/* @media screen and (min-width: 1280px) {
+@media screen and (min-width: 1280px) {
     html {
-        font-size:12px;
+        font-size:75%;
     }
-} */
+}
 
 /* For screen sizes larger than 1536px */
 @media screen and (min-width: 1536px) {
     html {
-        font-size: 14px;
+        font-size: 80%;
     }
 }
