--- a/src/components/CustomSearchSelection/style.css
+++ b/src/components/CustomSearchSelection/style.css
@@ -1,30 +1,29 @@
 
-.ant-select {
+ .custom-search {
   border-radius: 20px !important;
-
 }
-.ant-select-arrow {
+.custom-search .ant-select-arrow {
   display: none !important;
 }
-.ant-select-selection-overflow {
+.custom-search .ant-select-selection-overflow {
   box-sizing: border-box;
   height: max-content !important;
   padding: 1.7rem 0.8rem !important;
   border-radius: 10px !important;
 }
 
-.ant-select-selection-item {
+.custom-search .ant-select-selection-item {
   font-size: 24px !important;
 
 }
-.ant-select-selection-placeholder {
+.custom-search .ant-select-selection-placeholder {
   padding-left: 18px;
   font-size: 24px !important;
 
 }
 
 @media (max-width: 1024px) {
-  .ant-select-selection-placeholder {
+  .custom-search .ant-select-selection-placeholder {
     font-size: 20px !important;
     padding: 1.2rem 0.8rem !important;
 
