--- a/src/pages/Admin/adminProfile/app.css
+++ b/src/pages/Admin/adminProfile/app.css
@@ -1,4 +1,4 @@
-.ant-modal-content{
+/* .ant-modal-content{
     max-width: 973px !important;
     width: max-content !important;
     padding: 0!important;
@@ -14,4 +14,4 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
+} */
