admin profile fix

--- a/src/components/AdminProfile/EditProfile/style.css
+++ b/src/components/AdminProfile/EditProfile/style.css
@@ -1,4 +1,4 @@
-.ant-modal-wrap{
+.ant-modal-wrap1{
     display: flex!important;
     flex-direction: column!important;
     justify-content: center!important;
