💥 TourDetails v4 [ Comments APIs + AddToFavorites API ]

--- a/src/pages/Admin/adminProfile/app.css
+++ b/src/pages/Admin/adminProfile/app.css
@@ -4,10 +4,10 @@
     width: max-content !important;
     padding: 0!important;
 }
-.ant-modal-footer{
+.ant-modal-footer1{
     display: none;
 }
-.ant-modal-title{
+.ant-modal-title1{
     display: none;
 }
 .ant-modal-mask1{
