--- a/src/components/AdminProfile/EditProfile/style.css
+++ b/src/components/AdminProfile/EditProfile/style.css
@@ -1,6 +1,6 @@
-.ant-modal-wrap1{
+/* .ant-modal-wrap1{
     display: flex!important;
     flex-direction: column!important;
     justify-content: center!important;
     align-items: center!important;
-}
+} */
