--- a/src/components/shared/Admin/TimePicker/style.css
+++ b/src/components/shared/Admin/TimePicker/style.css
@@ -15,3 +15,26 @@
   width: 20px;
   height: 20px;
 }
+
+/* .custom-time-picker .ant-picker-ranges .ant-picker-ok .ant-btn.ant-btn-sm {
+  background-color: red !important;
+}
+
+.custom-time-picker .ant-btn .ant-btn-primary .ant-btn-sm {
+  background-color: red !important;
+} */
+
+
+.ant-btn-primary {
+  background-color: #009eb7 !important;
+  color: white;
+}
+
+.ant-btn-primary:disabled {
+  color: black;
+  background-color: rgba(0, 0, 0, 0.04) !important;
+}
+
+/* .custom-time-picker2 .ant-btn-primary{
+  background-color: #009eb7 !important;
+} */
